se agrego placeholder

--- a/html/jaimezapata.html
+++ b/html/jaimezapata.html
@@ -12,13 +12,13 @@
   <h2>Registro de Usuario</h2>
 
   <label for="nombre">Nombre completo:</label>
-  <input type="text" id="nombre" name="nombre" required>
+  <input type="text" id="nombre " name="nombre" required placeholder="nombre">
 
   <label for="email">Correo electrónico:</label>
-  <input type="email" id="email" name="email" required>
+  <input type="email" id="email" name="email" required placeholder="email">
 
   <label for="password">Contraseña:</label>
-  <input type="password" id="password" name="password" required>
+  <input type="password" id="password" name="Contraseña" required placeholder="Contraseña">
 
   <label for="fecha">Fecha de nacimiento:</label>
   <input type="date" id="fecha" name="fecha">
